--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:url" content="https://yourwebsite.com">
     <title>Musebot - Online Chatbot Ticketing System</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.2/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
     <style>
         /* Custom Animations */
@@ -236,14 +237,30 @@
     color: #79c0ff;
 }
 
-/* Navigation */
+/* Dark mode navigation styles */
 .dark-mode .nav-button {
-    color: #c9d1d9;
+    color: #ffffff !important;  /* Force white text in dark mode */
+    transition: color 0.3s ease, transform 0.2s ease, opacity 0.2s ease;
 }
 
 .dark-mode .nav-button:hover {
-    color: #ffffff;
+    color: #000000 !important;  /* Force black text on hover */
+    transform: translateY(-3px);
+    opacity: 0.9;
 }
+
+/* Special handling for login button to maintain its original styling */
+.dark-mode .nav-button.bg-black {
+    background-color: #000000 !important;  /* Force black background */
+    color: #ffffff !important;  /* Force white text */
+}
+
+.dark-mode .nav-button.bg-black:hover {
+    background-color: #ef4444 !important;  /* Red background on hover (bg-red-500) */
+    color: #030303 !important;  /* Keep text white on hover */
+}
+
+
 
 /* Dark mode toggle */
 .dark-mode #dark-mode-toggle {
@@ -278,7 +295,7 @@
     <header class="bg-indigo-600 text-white flex justify-between items-center px-6 py-4 shadow-lg">
         <div class="flex items-center space-x-2">
             <i class="fas fa-robot text-3xl"></i>
-            <h1 class="text-2xl font-bold">Musebot</h1>
+<h1 class="text-2xl font-bold" style="font-family: 'MuseoModerno', cursive;">MuseBot</h1>
         </div>
         
         <!-- Desktop Navigation -->
@@ -299,7 +316,7 @@
                 <i class="fas fa-info-circle text-xl"></i>
                 <span>About</span>
             </a>
-            <a href="login.html" class="nav-button flex items-center space-x-2 text-black bg-black px-4 py-2 rounded-full shadow-lg hover:bg-red-500 text-white transition">
+            <a href="login.html" class="nav-button flex items-center space-x-2 text-white bg-black px-4 py-2 rounded-full shadow-lg hover:bg-red-500 text-black transition">
                 <i class="fas fa-sign-in-alt text-xl"></i>
                 <span>Login</span>
             </a>
@@ -315,7 +332,7 @@
 <section class="bg-gradient-to-r from-indigo-600 to-indigo-600 text-white text-center py-12 px-4 md:py-16 md:px-6 animate-fadeIn">
     <h2 class="text-2xl md:text-4xl font-bold mb-4 animate-slideUp">Book Your Museum Tickets with Ease!</h2>
     <p class="text-base md:text-lg mb-6 animate-slideUp">Chat with Musebot for instant ticket booking in top museums across India.</p>
-    <a href="login.html" class="cta-button bg-yellow-400 text-black font-semibold px-6 py-3 rounded-full shadow-lg transition animate-bounce inline-block">
+    <a href="login.html" class="cta-button bg-yellow-400 text-black font-semibold px-6 py-3 rounded-full shadow-xl transition animate-bounce inline-block">
         Start Booking
     </a>
 </section>
@@ -399,7 +416,7 @@
     <section class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white text-center py-12 px-4 md:py-16 md:px-6 my-12 rounded-lg shadow-lg">
     <h3 class="text-xl md:text-2xl font-bold mb-4">Start Booking Today!</h3>
     <p class="text-base md:text-lg mb-6">Don’t miss out on your chance to experience incredible museums with ease. Book your tickets now!</p>
-    <a href="login.html" class="cta-button bg-yellow-400 text-black font-semibold px-6 py-3 rounded-full shadow-lg transition animate-bounce ">  
+    <a href="login.html" class="cta-button bg-yellow-400 text-black font-semibold px-6 py-3 rounded-full shadow-xl transition animate-bounce ">  
         Start Booking
     </a>
     </section>
